--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "tslint-test",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A test repo",
   "scripts": {
     "test": "tslint main.ts"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Jo Pearce",
   "license": "ISC",
   "devDependencies": {
     "tslint": "^5.10.0",
